--- a/lichkin-ueditor/src/main/resources/META-INF/resources/webjars/ueditor/1.4.3.3/dialogs/preview/preview.html
+++ b/lichkin-ueditor/src/main/resources/META-INF/resources/webjars/ueditor/1.4.3.3/dialogs/preview/preview.html
@@ -4,26 +4,29 @@
     <head>
         <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
         <style>
-            html,body{
+            html{
                 height:100%;
-                width:100%;
                 padding:0;
                 margin:0;
+            }
+            body{
+                height:89%;
+                padding:0;
+                margin:0;
+                overflow:auto;
             }
             #preview{
-                width:100%;
-                height:100%;
+                min-height:89%;
                 padding:0;
                 margin:0;
             }
-            #preview *{font-family:sans-serif;font-size:16px;}
         </style>
         <script type="text/javascript" src="../internal.js"></script>
         <script src="../../ueditor.parse.js"></script>
         <title></title>
     </head>
-    <body class="view">
-        <div id="preview" style="margin:8px">
+    <body class="view" style="background-color:gray;">
+        <div id="preview" style="margin:5% 300px;background-color:#ffffff;">
 
         </div>
     </body>
